# QtCamera-opencv-cmake

./: CMakeLists.txt  framehandle.cpp  framehandle.h  frameprocessor.cpp  frameprocessor.h  mainwindow.cpp  mainwindow.h  pixitem.cpp  pixitem.h  settings.cpp  settings.h
